mailgun try again

--- a/Trinug-Appharbor-Test/Web.config
+++ b/Trinug-Appharbor-Test/Web.config
@@ -74,4 +74,11 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network host="localhost" port="25" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
